test_case/rust-lang_rust/51335_398241265.rs
plain
travis_time:start:test_ui
Check compiletest suite=ui mode=ui (x86_64-unknown-linux-gnu -> x86_64-unknown-linux-gnu)
[00:42:42] 
[00:42:42] running 1504 tests
[00:42:46] ........F....................................................................................i......
[00:42:56] ....................................................................................................
[00:42:59] ....................................................................................................
[00:43:03] ....................................................................................................
[00:43:06] ....................................................................................................
---
[00:43:36] ....................................................................................................
[00:43:42] ....................................................................................................
[00:43:47] ....................................................................................................
[00:43:53] ...................i................................................................................
inux-gnu/test/ui/allocator-submodule/a" "-Crpath" "-O" "-Zunstable-options" "-Lnative=/checkout/obj/build/x86_64-unknown-linux-gnu/native/rust-test-helpers" "-L" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/allocator-submodule/auxiliary" "-A" "unused"
[00:43:54] ------------------------------------------
[00:43:54] 
[00:43:54] ------------------------------------------
[00:43:54] stderr:
[00:43:54] stderr:
[00:43:54] ------------------------------------------
[00:43:54] {"message":"`global_allocator` cannot be used in submodules","code":null,"level":"error","spans":[{"file_name":"/checkout/src/test/ui/allocator-submodule.rs","byte_start":989,"byte_end":1023,"line_start":34,"line_end":34,"column_start":5,"column_end":39,"is_primary":true,"text":[{"text":"    static MY_HEAP: MyAlloc = MyAlloc; //~ ERROR global_allocator","highlight_start":5,"highlight_end":39}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error: `global_allocator` cannot be used in submodules\n  --> /checkout/src/test/ui/allocator-submodule.rs:34:5\n   |\nLL |     static MY_HEAP: MyAlloc = MyAlloc; //~ ERROR global_allocator\n   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n\n"}
[00:43:54] {"message":"unresolved import `std::alloc::Opaque`","code":{"code":"E0432","explanation":"\nAn import was unresolved.\n\nErroneous code example:\n\n